; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_rc.c_start_timer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_rc.c_start_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qib_qp = type { %struct.TYPE_2__, i64, i32 }
%struct.TYPE_2__ = type { i64, i32 }

@QIB_S_TIMER = common dso_local global i32 0, align 4
@rc_timeout = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qib_qp*)* @start_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @start_timer(%struct.qib_qp* %0) #0 {
  %2 = alloca %struct.qib_qp*, align 8
  store %struct.qib_qp* %0, %struct.qib_qp** %2, align 8
  %3 = load i32, i32* @QIB_S_TIMER, align 4
  %4 = load %struct.qib_qp*, %struct.qib_qp** %2, align 8
  %5 = getelementptr inbounds %struct.qib_qp, %struct.qib_qp* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 8
  %7 = or i32 %6, %3
  store i32 %7, i32* %5, align 8
  %8 = load i32, i32* @rc_timeout, align 4
  %9 = load %struct.qib_qp*, %struct.qib_qp** %2, align 8
  %10 = getelementptr inbounds %struct.qib_qp, %struct.qib_qp* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  store i32 %8, i32* %11, align 8
  %12 = load i64, i64* @jiffies, align 8
  %13 = load %struct.qib_qp*, %struct.qib_qp** %2, align 8
  %14 = getelementptr inbounds %struct.qib_qp, %struct.qib_qp* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %12, %15
  %17 = load %struct.qib_qp*, %struct.qib_qp** %2, align 8
  %18 = getelementptr inbounds %struct.qib_qp, %struct.qib_qp* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  store i64 %16, i64* %19, align 8
  %20 = load %struct.qib_qp*, %struct.qib_qp** %2, align 8
  %21 = getelementptr inbounds %struct.qib_qp, %struct.qib_qp* %20, i32 0, i32 0
  %22 = call i32 @add_timer(%struct.TYPE_2__* %21)
  ret void
}

declare dso_local i32 @add_timer(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
